PyMaker/datas/object2/RawHTML/i16301/Python_DOC_referPages.invalid-syntax-error-while-running-pwssh.txt
<div class="post-text" itemprop="text">
<pre><code>#!/usr/bin/python
import pxssh
import getpass
try:
    s = pxssh.pxssh()
    hostname = raw_input('hostname:')
    username = raw_input ('username:')
    password = getpass.getpass ('password:')
    s.login (hostname,username,pawssword)
    s.sendline('uptime')
    s.prompt()
    print s.before
    s.sendline('ls-l')
    s.prompt()
    print s.before
    s.sendline('df')
    s.prompt()
    print s.before
</code></pre>
<hr/>
<pre><code>root@kali:/var/myPY# ./ssh.py
File "./ssh.py", line 19

                   ^
SyntaxError: invalid syntax
root@kali:/var/myPY# 
</code></pre>
<p>I do not see anything on line 19, please help me</p>
</div>
<div class="post-text" itemprop="text">
<p>A <code>try</code> block must be followed by least one <code>except</code> or a <code>finally</code>. You aren't catching any exception here, so just get rid of the <code>try</code> part:</p>
<pre><code>#!/usr/bin/python
import pxssh
import getpass

s = pxssh.pxssh()
hostname = raw_input('hostname:')
username = raw_input ('username:')
password = getpass.getpass ('password:')
s.login (hostname,username,pawssword)
s.sendline('uptime')
s.prompt()
print s.before
s.sendline('ls-l')
s.prompt()
print s.before
s.sendline('df')
s.prompt()
print s.before
</code></pre>
</div>
<span class="comment-copy">You have a <code>try</code> without an <code>except</code></span>
<span class="comment-copy">With <code>try</code> you need <code>except</code> or <code>finally</code> or <code>else</code>.</span>
<span class="comment-copy">Take some time to go through the <a href="https://docs.python.org/3/tutorial/errors.html#handling-exceptions" rel="nofollow noreferrer">Python Tutorial, section "Exceptions"</a></span>
<span class="comment-copy">When a parser/compiler gives an error on a line behind the end of your code, the parser expects something that it couldn't find. In your case it was a missing 'except'. In other languages you'll find it happens for missing }'s, )'s, missing string quotes and everything else that needs to be properly closed as well.</span>
<span class="comment-copy">Also note that <code>ls-l</code> should be <code>ls -l</code> and that running scripts as root is almost never a good idea.</span>
